<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Custom Assistant</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone"> 🎤 Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="logo">Logo</string>
    <string name="enroll">Enroll</string>
    <string name="bluetooth">BT</string>
    <string name="test">Test</string>
    <string name="enrollName">EnrollName</string>
    <string-array name="keywords">
        <item>Americano</item>
        <item>Alexa</item>
        <item>Blueberry</item>
        <item>Bumblebee</item>
        <item>Computer</item>
        <item>Grapefruit</item>
        <item>Grasshopper</item>
        <item>Hey_Google</item>
        <item>Hey_Siri</item>
        <item>Jarvis</item>
        <item>Ok_Google</item>
        <item>Picovoice</item>
        <item>Porcupine</item>
        <item>Terminator</item>
    </string-array>
    <string name="keyword_label">Keyword</string>
    <string-array name="models">
        <item>EN</item>
        <item>FR</item>
    </string-array>
    <string-array name="llm_models">
        <item>llama3.2:3b</item>
        <item>artifish/llama3.2-uncensored</item>
        <item>qwen2.5</item>
        <item>gemma3:4b</item>
        <item>deepseek-r1:7b</item>
    </string-array>
    <string name="model_label">Models</string>
    <string name="llm_model_label">LLM Models</string>
    <string name="reload"> 🔁 Reload</string>
    <string name="kill"> 🛑 Kill</string>
    <string name="play">[  ▶︎  ]</string>
    <string name="skip"> ▶▶ </string>
    <string name="pause"> ▐▐  </string>
    <string name="stop"> ⬜ </string>
    <string name="train"> 🥷 Train</string>
    <string name="local">Local</string>
    <string name="video">Video</string>
    <string name="google">Google</string>
    <string name="handip">Hand IP</string>
    <string name="serverip">Server IP</string>
    <string name="speakerid">Speaker ID</string>
    <string name="textlabel">Text</string>
    <string name="enter"> ↩️ </string>
    <string name="D3">3D</string>
    <string name="keepInMemory">KeepInMemory</string>
    <string name="whisper">Whisper</string>
    <string name="alwaysOn">AlwaysOn</string>
</resources>
